Add make valgrind rule for tests

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -11,3 +11,11 @@ test: $(TESTOBJS)
 
 $(TESTOBJS):
 
+
+valgrind:
+	valgrind --leak-check=full \
+		--show-leak-kinds=all \
+		--track-origins=yes \
+		--verbose \
+		--log-file=valgrind-out.txt \
+		./test
